fix: hero overflow

--- a/src/styles/views/home.module.sass
+++ b/src/styles/views/home.module.sass
@@ -18,11 +18,10 @@ $titleSize: 3.8em
   .Hero
     margin: 12em 0
     z-index: 1
-    width: 47%
+    width: 100%
 
     @media screen and (max-width: variables.$mobile-screen)
       margin: auto
-      width: auto
 
     h1
       font-size: $titleSize
@@ -59,7 +58,7 @@ $titleSize: 3.8em
         padding:
           left: 0
           right: 0
-        width: 32%
+        width: 15%
         font-size: 1.2em
 
         @media screen and (max-width: variables.$mobile-screen)
